[gd_scene load_steps=6 format=3 uid="uid://c2qwvxp8jkr5m"]

[ext_resource type="Script" path="res://scripts/entities/animals/animal.gd" id="1_animal"]
[ext_resource type="Script" path="res://scripts/entities/animals/components/selectable_component.gd" id="2_selectable"]
[ext_resource type="Script" path="res://scripts/entities/animals/components/movement_component.gd" id="3_movement"]
[ext_resource type="Script" path="res://scripts/entities/animals/components/stats_component.gd" id="4_stats"]

[sub_resource type="QuadMesh" id="QuadMesh_placeholder"]
size = Vector2(1, 1)

[node name="Animal" type="Node3D"]
script = ExtResource("1_animal")

[node name="Visual" type="Node3D" parent="."]

[node name="Placeholder" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("QuadMesh_placeholder")

[node name="SelectableComponent" type="Node" parent="."]
script = ExtResource("2_selectable")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_movement")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("4_stats")
